src/main/resources/prometheus/kube-prometheus/ingress/monitoring-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
spec:
  rules:
    - host: prometheus-lml.izaodao.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: prometheus-k8s
                port:
                  number: 9090
    - host: alertmanager-lml.izaodao.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: alertmanager-main
                port:
                  name: web
    - host: grafana-lml.izaodao.com
      http:
        paths:
            - pathType: Prefix
              path: /
              backend:
                service:
                  name: grafana
                  port:
                    name: http
